--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,10 @@ click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
 Django==5.2
+djangorestframework==3.16.0
 idna==3.10
 kombu==5.5.3
+pillow==11.2.1
 prompt_toolkit==3.0.51
 psycopg2==2.9.10
 python-dateutil==2.9.0.post0
