--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
 Django==5.2
+django-filter==25.1
 djangorestframework==3.16.0
 idna==3.10
 kombu==5.5.3
@@ -17,10 +18,13 @@ pillow==11.2.1
 prompt_toolkit==3.0.51
 psycopg2==2.9.10
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 redis==5.2.1
 requests==2.32.3
 six==1.17.0
 sqlparse==0.5.3
+stripe==12.0.1
+typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
 vine==5.1.0
